core/decompiler/test/smali/com/hulu/physicalplayer/errors/PlayReadyDrmException.smali
.class public Lcom/hulu/physicalplayer/errors/PlayReadyDrmException;
.super Lcom/hulu/physicalplayer/errors/DASHException;
.source "SourceFile"


# direct methods
.method public constructor <init>(Ljava/lang/String;)V
    .locals 0

    .line 11
    invoke-direct {p0, p1}, Lcom/hulu/physicalplayer/errors/DASHException;-><init>(Ljava/lang/String;)V

    .line 12
    return-void
.end method

.method public constructor <init>(Ljava/lang/String;Ljava/lang/Throwable;)V
    .locals 0

    .line 15
    invoke-direct {p0, p1, p2}, Lcom/hulu/physicalplayer/errors/DASHException;-><init>(Ljava/lang/String;Ljava/lang/Throwable;)V

    .line 16
    return-void
.end method
